--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/font.css">
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
@@ -20,6 +20,11 @@
 				<h1>ENDLESS<span>RIDE</span></h1>
 					<p>TAGLINE HERE</p>
 			</a>
+		</div>
+		<div class="hum">
+			<div class="line line-1"></div>
+			<div class="line line-2"></div>
+			<div class="line line-3"></div>
 		</div>
 		<div class="col-lg-9 col-md-9 col-sm-12">
 			<nav class="navbar navbar-expand-lg">
@@ -388,12 +393,12 @@
 		<div class="col-lg-4 col-md-4 col-sm-12">
 			<div class="dot d-flex justify-content-center">
 				<div class="icon">
-					<i class="fa fa-mobile fa-5x"></i>
+					<i class="fa fa-phone fa-5x"></i>
 				</div>
 			<div class="info">
-				<h1>Phone</h1>
-				<p>+123 456 7890</p>
-                <p>+123 456 7890</p>
+				<h1>Email</h1>
+				<p>free@psdfreebies.com</p>
+                <p>free@psdfreebies.com</p>
             </div>
 			</div>
 			</div>
@@ -443,10 +448,28 @@
 
 
 
-
 <script src="js/jquery-3.5.1.min.js"></script>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script type="text/javascript">
+	const hum = document.querySelector('.hum');
+	const header = document.querySelector('header');
+    const body = document.querySelector('body');
+	hum.onclick = ()=>{
+
+		header.classList.toggle('change');
+		body.classList.toggle('noscroll');
+	}
+	
+	window.onscroll = ()=>{
+		let top = scrollY;
+		if( top > 100 ){
+			header.classList.add('sticky');
+		} else {
+			header.classList.remove('sticky');
+		}
+	}
+</script>
 </body>
 </html>
